--- a/_posts/2019-02-02-org-jekyll.org
+++ b/_posts/2019-02-02-org-jekyll.org
@@ -1,40 +1,40 @@
 #+BEGIN_HTML
 ---
 title: Typing for Jekyll with Org syntax
-description: Notes on creating a bash script to convert Org files into HTML for Jekyll.
+description: Notes on creating a bash script to convert Org syntax to HTML for use with Jekyll.
 lede:
-  When creating this website, I looked for a way to type my content in Org syntax and have it work with a static site generator.
-  This is a record of creating a bash script to convert Org syntax to HTML, specifically for Jekyll.
+  To type for this site, generated with Jekyll, I searched for a way to use Org syntax rather than the standard Markdown. This is a record of creating a bash script to convert Org syntax to HTML with special tweaks for Jekyll.
 ---
 #+END_HTML
 ** Why Org?
 The most popular plain text markup for rich export is Markdown.
-It is easy to type, with syntax that is easy to memorize, and easy to read in its plain text form.
+It is easy to type, its syntax is easy to memorize, and its plain text form can be easy to read.
 
-Its popularity, however, doesn't pay off.
-There are multiple flavors of Markdown out there[fn:flavors], and depending which one is in use, some markup won't work.
+Its popularity, however, doesn't quite pay off.
+Seemingly due to shortcomings of its original spec, multiple "flavors" of Markdown have emerged, and it is not always clear which one is in use.
+*Pandoc*, for example, can export to six different types of Markdown.
 
-What would be a major advantage The biggest drawback of Markdown, in my opinion, is that it's not really a standard.
-There are several flavors of Markdown out there, and some will translate things a little differently than others.
+Org, on the other hand, is one standard centered around an excellent tool for editing it: Emacs Org mode.
+Org syntax is by no means perfect, but it has been there for a long time, it is just as easy to work with as Markdown, and is certainly more reliable for rich export.
+Typically, its fans will argue that you would be hard pressed to find an application for working with Markdown syntax that is as good as Emacs Org mode.
+Indeed, most Markdown typing application are fairly uninspiring.
 
-Org, on the other hand, is one standard centered around Emacs Org mode.
-It is just as capable as Markdown, if not better, and has in Emacs Org mode an excellent tool for editing it[fn:proorg].
-
-[fn:flavors] For example, /pandoc/ can export to six different types of Markdown.
-[fn:proorg] This is probably the main argument typically mentioned in favor of Org: you can't find an application for editing Markdown that is as good as Org mode is for Org.
+The only thing holding it back is that not that many people use it and so not a lot of applications support it.
 
 Of course the obstacle for a lot of people is taking on Emacs. To those of you in that crowd, I suggest looking at [[https://spacemacs.org/][Spacemacs]].
+
 ** Starting out with MkDocs
-Hoping to give my site a documentation feel, I tried to use [[https://www.mkdocs.org/][MkDocs]] as my static site generator.
-I had envisioned my site containing collections of articles on a number of subjects, so I could group them together and display them as if they were documentation.
-Soon I found that MkDocs really only made sense for actual documentation, but not before I had written a bash script to convert my Org files into Markdown and then build the site with MkDocs.
+Hoping to give my site a documentation feel, I began this process in [[https://www.mkdocs.org/][MkDocs]], a static site generator for software documentation.
+I had envisioned collections of articles on a number of subjects, which I could group together and display as if documentation.
+I Soon found that MkDocs really only made sense for actual documentation, but not before I had written a bash script to convert my Org files into Markdown and then build the site with MkDocs.
 
 Here are some of my lightly edited notes from working with MkDocs.
-As I was doing this, I was also trying to practice literate programming[fn:litprog].
+For kicks, I was trying to do this in a literate programming sort of way[fn:litprog].
 
-[fn:litprog] Literate programming is a programming paradigm in which you sort of string together code and documentation.
+[fn:litprog] Literate programming is a programming paradigm in which you sort of string together code and documentation. I recommend trying it.
 
 See https://en.wikipedia.org/wiki/Literate_programming and http://www.cachestocaches.com/2018/6/org-literate-programming/.
+
 *** Noted on [2018-12-02 Sun 21:50]
 The following command will convert Org files into Markdown files.
 
@@ -43,19 +43,17 @@ pandoc -t gfm --wrap=preserve -o output.md input.org
 #+END_SRC
 
 The ~gfm~ format (Github-flavored Markdown) has so far worked well with MkDocs.
-However, the option ~--wrap=preserve~ is necessary because, by default, /pandoc/ will create line breaks, which will be ignored by the markdown parser.
+The option ~--wrap=preserve~ is necessary because, by default, /pandoc/ will create line breaks, which will be ignored by the markdown parser.
 However, if they come inside inline code, the line break will make it into the rendered HTML.
 To prevent this, tell pandoc to preserve the original text wrapping.
 *** Noted on [2018-12-02 Sun 23:35]
-To operate on all the Org files we need, the script has to create a variable for the new filename, changing the file extension via /sed/[fn:sed], and then, using a ~while~ loop, iterate through every ~.org~ file within the present working directory or any of its subdirectory.
+To operate on all the Org files we need, the script has to create a variable for the new filename, changing its extension via /sed/[fn:sed], and then, using a ~while~ loop, iterate through every ~.org~ file within the present working directory or any of its subdirectory.
 
-Finally, it runs mkdocs to build the site.
 #+BEGIN_SRC bash
 find . -name "*.org" | while read -r filename
 do newfilename=$(echo $filename | sed -e "s/\.org/.md/g")
 pandoc -t gfm --wrap=preserve -o $newfilename $filename
 done
-mkdocs @
 #+END_SRC
 [fn:sed] /sed/, stream editor, is a Unix program that can manipulate text in files. It's one of the most valuable tools to learn for bash scripting.
 
