--- a/about.org
+++ b/about.org
@@ -2,7 +2,6 @@
 ---
 title: About me
 permalink: /about/
-nofooter: t
 ---
 #+END_HTML
 I am a Brazilian immigrant in Kansas City working on a portfolio of technical writing and looking to begin a career in that field.
@@ -24,12 +23,13 @@ I am a Brazilian immigrant in Kansas City working on a portfolio of technical wr
 - more...
 
 ** Things I want to do:
-- work with words, style and typography, technology and education in an industry where important work gets done;
+- work with words, technology and education in an industry where important work gets done;
 - catch up on the history of world cinema;
 - write and shoot my own movies.
 
 ** Things I have done:
 - studied Communications in college with a focus on Radio and TV;
+- written and shot my own movies;
 - worked as a freelance videographer, shooting and editing video;
 - taught workshops on video production;
 - managed a youth hostel in London with 40 dorms and 200 beds;
